--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -12,6 +12,6 @@ body {
 </style>
 </head>
 <body>
-	<a href="#" target="blank"> Aufgabe00</a>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe00/miniAufgbabe.html" target="blank"> Aufgabe011</a>
 </body>
 </html>
