--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -12,6 +12,6 @@ body {
 </style>
 </head>
 <body>
-	
+	<a href="https://nadineperisic.github.io/EIA1-SoSe20/Aufgabe00/miniAufgabe.html" target="blank"> Aufgabe00</a>
 </body>
 </html>
