--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -13,5 +13,6 @@ body {
 </head>
 <body>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe00/miniAufgabe.html" target="blank"> Aufgabe00 (Begrüßung)</a>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe01" target="blank"> Aufgabe01 </a>
 </body>
 </html>
