--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -12,8 +12,10 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe00/miniAufgabe.html" target="blank"> Aufgabe00 (Begrüßung)</a>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe00/miniAufgabe.html" target="blank"> Aufgabe00</a>
 	<br>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe01/Nadine.html" target="blank"> Aufgabe01 </a>
+	<br>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe02/2.html" target="blank"> Aufgabe02 </a>
 </body>
 </html>
