--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -17,5 +17,7 @@ body {
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe01/Nadine.html" target="blank"> Aufgabe01 </a>
 	<br>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe02/2.html" target="blank"> Aufgabe02 </a>
+	<br>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe03/Hexenkessel.html" target="blank"> Aufgabe03 </a>
 </body>
 </html>
