--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -19,5 +19,7 @@ body {
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe02/2.html" target="blank"> Aufgabe02 </a>
 	<br>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe03/Hexenkessel.html" target="blank"> Aufgabe03 </a>
+	<br>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe04/Hexenkessel.html" target="blank"> Aufgabe04 </a>
 </body>
 </html>
