--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -12,8 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Hexenkessel/Hexenkesse/potion.html" target="blank"> Aufgabe06 Code </a>
-	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Hexenkessel/Hexenkessel/L06.html" target="blank"> Aufgabe06 Scribble </a>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Hexenkessel/Hexenkessel/potion.html" target="blank"> Aufgabe06 Code </a>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Hexenkessel/Hexenkessel/L06.html" target="blank"> und Scribble </a>
 	<br>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe05/L05.html" target="blank"> Aufgabe05 </a>
 	<br>
