--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,6 +14,8 @@ body {
 <body>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020.github.io" target="blank"> Repository </a>
 	<br>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe08/Aufgabe08.html" target="blank"> Aufgabe08 Code </a>
+	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe08/Aufgabe8.html" target="blank"> und Scribble </a>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Aufgabe07/Aufgabe07.html" target="blank"> Aufgabe07 </a>
 	<br>
 	<a href="https://nadineperisic.github.io/EIA2-WiSe-2020/Hexenkessel/Hexenkessel/potion.html" target="blank"> Aufgabe06 Code </a>
