--- a/Aufgabe10/Aufgabe10.html
+++ b/Aufgabe10/Aufgabe10.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Aufgabe 10</p>
+    <img src="IMG_8236.jpeg" width="1200" height="800">
+    <p>Aufgabe 9</p>
     <img src="Datei_000.jpeg" width="1200" height="800">
     <img src="Datei_001.jpeg" width="1200" height="800">
-    
+</body>
+</html>
